--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "terminal.integrated.env.windows": {
         "SFDX_SET_CLIENT_IDS": "sfdx-vscode"
     },
-    "eslint.nodePath": "/home/gidiem/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-44.17.0/node_modules",
+    "eslint.nodePath": "c:\\Users\\Glen\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-44.17.0\\node_modules",
     "html.suggest.angular1": false,
     "html.suggest.ionic": false
 }
