--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
     "defaultdevhubusername": "glen-sjcc@force.com",
-    "defaultusername": "HelloWorldLightningWebComponent"
+    "defaultusername": "lwc-scratch-surface2"
 }
